--- a/MusicWebsite.Server/public/styles/responsive.css
+++ b/MusicWebsite.Server/public/styles/responsive.css
@@ -10,4 +10,15 @@
     .track {
         flex: 1 1 100%;
     }
+
+    @media (max-width: 768px) {
+        .home-container {
+            flex-direction: column;
+        }
+
+        .genres-filter,
+        .tracks-list {
+            width: 100%;
+        }
+    }
 }
